--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue-scroll-loader": "^2.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
@@ -29,6 +30,7 @@
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   },
