--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^7.9.1",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
+    "vue-image-upload-resize": "^2.3.0",
     "vue-router": "^3.1.5",
     "vue-scroll-loader": "^2.2.0",
     "vuetify": "^2.2.11",
